johnlimadev/force-app/main/default/objects/Case/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aluno</label>
    <referenceTo>Aluno__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>