johnlimadev/force-app/main/default/objects/Case/fields/isAllowedIcecream__c.field-meta.xml
<CustomField>
    <fullName>isAllowedIcecream__c</fullName>
    <formula>$Permission.isAllowedIcecream</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAllowedIcecream</label>
    <type>Checkbox</type>
</CustomField>