johnlimadev/force-app/main/default/objects/Case/fields/Sometime__c.field-meta.xml
<CustomField>
    <fullName>Sometime__c</fullName>
    <label>Sometime</label>
    <type>DateTime</type>
</CustomField>