johnlimadev/force-app/main/default/objects/Case/fields/Testing_History_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Testing_History_Tracking__c</fullName>
    <label>Testing History Tracking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>